--- a/angular.json
+++ b/angular.json
@@ -1,7 +1,140 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "3eecef4e-7097-41be-84fd-9ce6c5928219"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-  }
+    "ngx-layout": {
+      "projectType": "library",
+      "root": "projects/ngx-layout",
+      "sourceRoot": "projects/ngx-layout/src",
+      "prefix": "ngx-layout",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ngx-layout/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ngx-layout/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ngx-layout/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ngx-layout/src/test.ts",
+            "tsConfig": "projects/ngx-layout/tsconfig.spec.json",
+            "karmaConfig": "projects/ngx-layout/karma.conf.js"
+          }
+        }
+      }
+    },
+    "TestLayout": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:application": {
+          "strict": true
+        }
+      },
+      "root": "projects/test-layout",
+      "sourceRoot": "projects/test-layout/src",
+      "prefix": "app",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/TestLayout",
+            "index": "projects/test-layout/src/index.html",
+            "main": "projects/test-layout/src/main.ts",
+            "polyfills": "projects/test-layout/src/polyfills.ts",
+            "tsConfig": "projects/test-layout/tsconfig.app.json",
+            "assets": [
+              "projects/test-layout/src/favicon.ico",
+              "projects/test-layout/src/assets"
+            ],
+            "styles": [
+              "projects/test-layout/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "projects/test-layout/src/environments/environment.ts",
+                  "with": "projects/test-layout/src/environments/environment.prod.ts"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "buildOptimizer": false,
+              "optimization": false,
+              "vendorChunk": true,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "browserTarget": "TestLayout:build:production"
+            },
+            "development": {
+              "browserTarget": "TestLayout:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "browserTarget": "TestLayout:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/test-layout/src/test.ts",
+            "polyfills": "projects/test-layout/src/polyfills.ts",
+            "tsConfig": "projects/test-layout/tsconfig.spec.json",
+            "karmaConfig": "projects/test-layout/karma.conf.js",
+            "assets": [
+              "projects/test-layout/src/favicon.ico",
+              "projects/test-layout/src/assets"
+            ],
+            "styles": [
+              "projects/test-layout/src/styles.css"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "ngx-layout"
 }
