--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,16 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
+    "paths": {
+      "layout": [
+        "dist/layout/layout",
+        "dist/layout"
+      ],
+      "ngx-layout": [
+        "dist/ngx-layout/ngx-layout",
+        "dist/ngx-layout"
+      ]
+    },
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
